# MAVSDK

automissions/offboard_forward/: CMakeLists.txt  offboard_forward.cpp
automissions/offboard_omnidirectional/: CMakeLists.txt  offboard_omnidirectional.cpp
automissions/offboard_orthogonal/: CMakeLists.txt  offboard_orthogonal.cpp
automissions/offboard_start_stop/: CMakeLists.txt  offboard_start_stop.cpp
automissions/takeoff_and_land/: takeoff_and_land.cpp
